Fixed visibility of content buttons

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -102,6 +102,7 @@ html, body{
     background-color: #1973BD;
     color: white;
     transition: 0.2s;
+    z-index: 9;
 }
 #content .content_button:hover{
     background-color: rgb(54, 161, 248);
@@ -159,6 +160,7 @@ table td a:hover{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: rgba(0, 0, 0, 0.9);
     color: white;
+    z-index: 10;
 }
 
 .new_item_title{
